--- a/Trabalho-1/index.html
+++ b/Trabalho-1/index.html
@@ -11,7 +11,7 @@
             }
         </style>
         <script src="js/three.min.js"></script>
-        <script src="js/projeto.js"></script>
+        <script src="js/trabalho.js"></script>
     </head>
     <body>
         <script>
