--- a/Trabalho-3/index.html
+++ b/Trabalho-3/index.html
@@ -10,7 +10,7 @@
                 overflow: hidden;
             }
         </style>
-        <script src="js/three.min.js"></script>
+        <script src="js/three.js"></script>
         <script src="js/trabalho.js"></script>
     </head>
     <body>
